<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/back480"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/opponent_score"
            android:textSize="20sp"
            android:textStyle="bold" />        

        <TextView
            android:id="@+id/opponentScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableRight="@drawable/diamond_32"
            android:drawablePadding="5dp" />

        <!-- <LinearLayout
            android:id="@+id/leftScorelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >
        </LinearLayout> -->

        <!--
        <GridView 
            android:id="@+id/leftGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </GridView>
        -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ally_score"
            android:textSize="20sp"
            android:textStyle="bold" />        

        <TextView
            android:id="@+id/allyScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawableRight="@drawable/hearts_32"
            android:drawablePadding="5dp" />

        <!--
        <LinearLayout
            android:id="@+id/rightScoreLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
        -->

        <!-- <GridView
            android:id="@+id/rightGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </GridView> -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leftPlayerLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:orientation="vertical" >        
        
        <ImageView 
            android:id="@+id/leftOnlineImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/online"
            android:visibility="invisible" />        
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topPlayerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <ImageView 
            android:id="@+id/topOnlineImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/online"
            android:visibility="invisible" />        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="105dp"
            android:layout_height="131dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/centerTextView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent" />

            <ImageView
                android:id="@+id/centerRightImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/centerTextView"
                android:src="@drawable/back1" />

            <ImageView
                android:id="@+id/centerLeftImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/centerTextView"
                android:src="@drawable/back1" />

            <ImageView
                android:id="@+id/centerTopImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/back1" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightPlayerLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="vertical" >        
        
        <ImageView 
            android:id="@+id/rightOnlineImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/online"
            android:visibility="invisible" />
                            
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPlayerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >
        
        <ImageView 
            android:id="@+id/BottomOnlineImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/online" />        
        
    </LinearLayout>

    <ImageView
        android:id="@+id/centerBottomImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/centerLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:src="@drawable/back1" />

    <ImageButton
        android:id="@+id/trumpCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topPlayerLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/back1" />

</RelativeLayout>